@@ -1,5 +1,11 @@
 2022-07-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
+	* src/z80/gen.c,
+	  support/regression/tests/bug-3459.c:
+	  Fix bug #3459.
+
+2022-07-12 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
 	* src/SDCCsymt.c,
 	  support/regression/tests/bug-3456.c,
 	  support/regression/tests/bug-3459.c,
